src/index.css
body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

.nav-bar {
  position: fixed;
  top: 7vh;
  width: 100%;
  margin: auto;
  text-align: right;
  background-color: grey;
  height: 5vh;
 }

.link-btn {
  margin: auto;
  display: inline-block;
  color: white;
  background-color: grey;
  text-decoration: none;
  width: 15;
  text-align: center;
  padding: 1vh;
  font-size: medium;
  font-weight: bold;
}

.header{
  width: 100%;
  height: 7vh;
  background-color: rgb(40, 40, 40);
  position: fixed;
  top: 0;
  text-align: center;
  box-shadow: 0px 0px 10px 0px;
  z-index: 1;
}

.header-txt{
  margin-top: 0;
  color: white;
  text-align: center;
  line-height: 7vh;
}

.form{
  padding: 2%;
}

.input-card {
  box-shadow: 1px 1px 10px 1px;
  height: 100%;
  width: 50%;
  margin: auto;
  margin-top: 15vh;
  text-align: center;
}

.input-fields {
  width: 50%;
  margin: auto;
  margin-bottom: 5%;
  height: 4vh;
}

.mortgage-input {
  width: 35%;
  margin: auto;
  margin-bottom: 5%;
  height: 4vh;
}

.moreDets{
  height: 5vh;
  width: 15%;
  text-align: center;
}

.mortgage-label{
  display: inline-block;
  align-items: right;
}

.mortgage-calculator{
  display: inline;
  width: 35px;
}
.details-input{
  width: 35px;
  margin-top: 2%;
}

.button {
  background-color: rgb(75, 181, 67);
  color: white;
  height: 5vh;
  width: 20vw;
  margin-top: 2vh;
  margin-bottom: 5vh;
  font-size: 20px;
  border: 1px solid grey;
}

.search-btn{
  display: inline-block;
  background-color: rgb(75, 181, 67);
  color: white;
  height: 7vh;
  font-size: 20px;
  margin: .25%;
  border: 1px solid grey;
  border-radius: 0;
}
@media screen and (min-width:750px){
  .search-btn:hover {
    color: rgb(40, 40, 40);
  }
  .button:hover {
    color: rgb(40, 40, 40);
  }
  .link-btn:hover{
    color: rgb(40, 40, 40);
  }
}

.resultsCard {
  box-shadow: 1px 1px 10px 1px;
  width: 50%;
  margin: auto;
  margin-top: 5vh;
  height: 30vh;
  margin-bottom: 5vh;
  text-align: center;
}

.results {
  text-align: left;
  margin-left: 5%;
}

.search{
  display: flex;
  margin-top: 20vh;
  width: 100%;
}

.search-w-btn{
  width: 100%;
  margin: auto;
  text-align: center;
}

.search-bar{
  display: inline-block;
  width: 50%;
  height: 7vh;
  font-size: 20px;
  border-radius: 0;
  border: 1px solid grey;
}

.search-results{
  width: 50%;
  text-align: center;
  margin: auto;
  margin-top: 10vh;
  height: 20vh;
}

@media screen and (max-width:750px){
  .input-card {
    box-shadow: 1px 1px 10px 1px;
    height: 100%;
    width: 80%;
    margin: auto;
    margin-top: 15vh;
  }
  .resultsCard {
    box-shadow: 1px 1px 10px 1px;
    width: 80%;
    margin: auto;
    margin-top: 5vh;
    height: 30vh;
    margin-bottom: 5vh;
  }
  .moreDets{
    height: 5vh;
    width: 15%;
    text-align: center;
  }
  .link-btn {
    display: inline-block;
    text-align: center;
    margin-left: 10vw;
    margin-right: 10vw;
  }
  .nav-bar {
    text-align: center;
    margin: auto;
   }
}

